--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
-language: python
-python:
-  - '3.7'
-os:
-  - osx
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode12
+      python: "3.7"
+
 deploy:
   provider: pypi
   user: maxhumber
