--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,26 @@
+language: python
+python:
+  - "3.7"
+
 matrix:
   include:
     - os: osx
       osx_image: xcode12
-      python: "3.7"
+
+install:
+  - sudo apt update
+  - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh;
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - source "$HOME/miniconda/etc/profile.d/conda.sh"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda info -a
+  - pip install -e .
+  - pip install pytest
+
+script:
+  - pytest
 
 deploy:
   provider: pypi
@@ -10,10 +28,3 @@ deploy:
   password: $PYPI_PASSWORD
   on:
     tags: true
-
-install:
-  - "pip install -e ."
-  - "pip install pytest"
-
-script:
-  - pytest
