--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,12 @@ matrix:
       osx_image: xcode12
 
 install:
-  - sudo apt update
   - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh;
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - source "$HOME/miniconda/etc/profile.d/conda.sh"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda info -a
-  - pip install -e .
+  - bash miniconda.sh -b -p $HOME/miniconda -y
+  - source $HOME/miniconda/bin/activate
+  - conda init zsh
   - pip install pytest
+  - pip install -e .
 
 script:
   - pytest
